<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="22dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account"
                android:textColor="#4355b4"
                android:textSize="18dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/cvAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:elevation="3dp"
                android:orientation="horizontal"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/user_email"
                        android:textColor="@android:color/black"
                        android:hint="@string/default_email"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"/>

                    <Button
                        android:id="@+id/user_logout"
                        android:text="@string/log_out"
                        android:background="@android:color/transparent"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#4355b4"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sendMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                android:text="@string/any_question" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/app_version" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>