<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical"
    tools:context="com.easytechhub.helloeyakub.researchhub.account.ActivityLogin">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:src="@drawable/icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <ImageView
            android:id="@+id/mailIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/mailoutline" />

        <EditText
            android:id="@+id/mailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/mailIcon"
            android:layout_toRightOf="@id/mailIcon"
            android:backgroundTint="@android:color/transparent"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="6dp"
            android:textColor="#e9c3cf"
            android:textColorHint="#e9c3cf"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/mailIcon"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white" />

        <ImageView
            android:id="@+id/passIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_below="@id/view1"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            app:srcCompat="@drawable/lockoutline" />

        <EditText
            android:id="@+id/passET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_toRightOf="@id/passIcon"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/regPassword"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:textColor="#e9c3cf"
            android:textColorHint="#e9c3cf" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/passIcon"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/view2"
            android:layout_marginTop="18dp"
            android:background="#a46a97"
            android:text="@string/login_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnForgetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="12dp"
            android:text="@string/forget_pass"
            android:textAlignment="center"
            android:textColor="#e9becc"
            android:textAllCaps="false"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btnCreateOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:text="@string/create_one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#e9c3cf" />
    </RelativeLayout>
</LinearLayout>

